Removed dependency of fastpbkdf2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,10 +89,10 @@ set(APP_VERSION, "${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}")
 endif()
 
 # Man build and install
-if(NOT DEFINED WIN32)
-    add_subdirectory(man)
-    add_subdirectory(src/vscp/vscp-mkpasswd)
-endif()
+#if(NOT DEFINED WIN32)
+#    add_subdirectory(man)
+#    add_subdirectory(src/vscp/vscp-mkpasswd)
+#endif()
 
 option(USE_SSL "Use SSL" TRUE)
 
@@ -297,8 +297,6 @@ if (WIN32)
         src/common/crc8.c
         src/common/vscpmd5.h
         src/common/vscpmd5.c
-        ./third_party/fastpbkdf2/fastpbkdf2.h
-        ./third_party/fastpbkdf2/fastpbkdf2.c  
         src/common/randpassword.h
         src/common/randpassword.cpp     
     )
@@ -348,8 +346,6 @@ else()
         src/common/crc8.c
         src/common/vscpmd5.h
         src/common/vscpmd5.c
-        ./third_party/fastpbkdf2/fastpbkdf2.h
-        ./third_party/fastpbkdf2/fastpbkdf2.c   
         src/common/randpassword.h
         src/common/randpassword.cpp     
     )
@@ -368,7 +364,6 @@ if (WIN32)
                             ./third_party/sqlite3/
                             ./third_party/spdlog/include/
                             ./third_party/mustache/
-                            ./third_party/fastpbkdf2/
                             ./src/common/windows
                             ${PThreads4W_INCLUDE_DIR}
                             ${CMAKE_BINARY_DIR}
@@ -387,7 +382,6 @@ else()
                             ./third_party/sqlite3/
                             ./third_party/mustache/
                             ./third_party/spdlog/include/
-                            ./third_party/fastpbkdf2/
                             ${PThreads4W_INCLUDE_DIR}
                             ${CMAKE_BINARY_DIR}
                             ${OPENSSL_INCLUDE_DIR}
