--- a/src/vscp/vscpcmd/vscpcmd.vcxproj
+++ b/src/vscp/vscpcmd/vscpcmd.vcxproj
@@ -439,7 +439,7 @@
     <ClInclude Include="..\..\common\sockettcp.h" />
     <ClInclude Include="..\..\common\vscpbase64.h" />
     <ClInclude Include="..\..\common\vscpmd5.h" />
-    <ClInclude Include="..\..\common\vscp_aes.h" />
+    <ClInclude Include="..\..\common\vscp-aes.h" />
     <ClInclude Include="..\common\controlobject.h" />
     <ClInclude Include="vscpcmd.h" />
   </ItemGroup>
@@ -450,7 +450,7 @@
     <ClCompile Include="..\..\common\sockettcp.c" />
     <ClCompile Include="..\..\common\vscpbase64.c" />
     <ClCompile Include="..\..\common\vscpmd5.c" />
-    <ClCompile Include="..\..\common\vscp_aes.c" />
+    <ClCompile Include="..\..\common\vscp-aes.c" />
     <ClCompile Include="..\common\guid.cpp" />
     <ClCompile Include="..\common\vscpremotetcpif.cpp" />
     <ClCompile Include="vscpcmd.cpp" />
