--- a/src/vscp/vscphubd/Makefile.in
+++ b/src/vscp/vscphubd/Makefile.in
@@ -111,7 +111,7 @@ VSCPD_OBJECTS =  vscpd.o \
 	lua_all.o\
 	lua_vscp_wrkthread.o\
 	lua_vscp_func.o\
-	vscp_aes.o \
+	vscp-aes.o \
 	sqlite3.o \
 	sqlite3math.o \
 	fastpbkdf2.o \
@@ -186,8 +186,8 @@ vscpdatetime.o: ../../common/vscpdatetime.cpp ../../common/vscpdatetime.h
 dllist.o: ../../../common/dllist.c ../../../common/dllist.h
 	$(CC) $(CFLAGS) -c ../../../common/dllist.c  -o $@
 
-vscp_aes.o: ../../../common/vscp_aes.c ../../../common/vscp_aes.h
-	$(CC) $(CFLAGS) -c ../../../common/vscp_aes.c -o $@
+vscp-aes.o: ../../../common/vscp-aes.c ../../../common/vscp-aes.h
+	$(CC) $(CFLAGS) -c ../../../common/vscp-aes.c -o $@
 
 crc.o: ../../../common/crc.c ../../../common/crc.h
 	$(CC) $(CFLAGS) -c ../../../common/crc.c -o $@
