--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,225 +1,234 @@
 {
     "version": "2.0.0",
     "tasks": [
-        {
-            "taskName": "build vscpd",
-            "type": "shell",
-            "command": "cd build; make -j4",
-            "args": [],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            },
-            "problemMatcher": "$gcc"
+      {
+        "taskName": "build vscpd",
+        "type": "shell",
+        "command": "cd build; make -j4",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
         },
-        {
-            "taskName": "clean & build vscpd",
-            "type": "shell",
-            "command": "mkdir build; cd build; rm CMakeCache.txt; cmake --clean-first .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
-            "args": [],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            },
-            "problemMatcher": {
-                "owner": "cpp",
-                "fileLocation": ["relative", "${workspaceFolder}"],
-                "pattern": {
-                  "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
-                  "file": 1,
-                  "line": 2,
-                  "column": 3,
-                  "severity": 4,
-                  "message": 5
-                }
-            }
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "clean & build vscpd",
+        "type": "shell",
+        "command": "mkdir build; cd build; rm CMakeCache.txt; cmake --clean-first .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
         },
-        {
-            "taskName": "build package",
-            "type": "shell",
-            "command": "cd build; cpack",
-            "args": [],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            },
-            "problemMatcher": "$gcc"
-        },
-        {
-            "taskName": "build vscphelper unittest",
-            "type": "shell",
-            "command": "cd tests/helperlib;make",
-            "args": [],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            },
-            "problemMatcher": {
-                "owner": "cpp",
-                "fileLocation": ["relative", "${workspaceFolder}"],
-                "pattern": {
-                  "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
-                  "file": 1,
-                  "line": 2,
-                  "column": 3,   
-                  "severity": 4,
-                  "message": 5
-                }
-            }
-        },
-        {
-            "taskName": "clean & build unittest vscphelper",
-            "type": "shell",
-            "command": "cd tests/helperlib; make clean; make  -j4",
-            "args": [],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            },
-            "problemMatcher": {
-                "owner": "cpp",
-                "fileLocation": ["relative", "${workspaceFolder}"],
-                "pattern": {
-                  "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
-                  "file": 1,
-                  "line": 2,
-                  "column": 3,
-                  "severity": 4,
-                  "message": 5
-                }
-            }
-        },
-        {
-            "taskName": "build unittest userlist",
-            "type": "shell",
-            "command": "cd test/userlist/build; make",
-            "args": [],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            },
-            "problemMatcher": "$gcc"
-        },
-        {
-            "taskName": "clean & build unittest userlist",
-            "type": "shell",
-            "command": "cd tests/userlist; mkdir build; cd build; cmake ..; make clean; make -j4",
-            "args": [],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            },
-            "problemMatcher": "$gcc"
-        },
-        {
-            "taskName": "build unittest clientlist",
-            "type": "shell",
-            "command": "cd test/clientlist/build; make",
-            "args": [],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            },
-            "problemMatcher": "$gcc"
-        },
-        {
-          "taskName": "clean & build test remotetcpif",
-          "type": "shell",
-          "command": "cd tests/remotetcpif; rm -rf build; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make  -j4",
-          "args": [],
-          "group": {
-              "kind": "build",
-              "isDefault": false
-          },
-          "problemMatcher": "$gcc"
-        },
-        {
-          "taskName": "build test remotetcpif",
-          "type": "shell",
-          "command": "cd tests/remotetcpif/build; make",
-          "args": [],
-          "group": {
-              "kind": "build",
-              "isDefault": false
-          },
-          "problemMatcher": "$gcc"
-        },
-        {
-            "taskName": "clean & build unittest clientlist",
-            "type": "shell",
-            "command": "cd tests/clientlist; mkdir build; cd build; cmake ..; make clean; make  -j4",
-            "args": [],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            },
-            "problemMatcher": "$gcc"
-        },
-        {
-            "taskName": "build test code for vscp-client-mqtt",
-            "type": "shell",
-            "command": "cd tests/vscp-client-mqtt/build; make",
-            "args": [],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            },
-            "problemMatcher": "$gcc"
-        },
-        {
-            "taskName": "clean & build test code for vscp-client-mqtt",
-            "type": "shell",
-            "command": "cd tests/vscp-client-mqtt; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
-            "args": [],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            },
-            "problemMatcher": "$gcc"
-        },
-        {
-          "taskName": "build test code for mdfparser",
-          "type": "shell",
-          "command": "cd tests/mdfparser/build; make",
-          "args": [],
-          "group": {
-              "kind": "build",
-              "isDefault": false
-          },
-          "problemMatcher": "$gcc"
-        },
-        {
-          "taskName": "clean & build test code for mdfparser",
-          "type": "shell",
-          "command": "cd tests/mdfparser; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
-          "args": [],
-          "group": {
-              "kind": "build",
-              "isDefault": false
-          },
-          "problemMatcher": "$gcc"
-        },
-        {
-          "taskName": "build test code for register-test",
-          "type": "shell",
-          "command": "cd tests/register/build; make -j4",
-          "args": [],
-          "group": {
-              "kind": "build",
-              "isDefault": false
-          },
-          "problemMatcher": "$gcc"
-        },
-        {
-          "taskName": "clean & build test code for register-test",
-          "type": "shell",
-          "command": "cd tests/register; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
-          "args": [],
-          "group": {
-              "kind": "build",
-              "isDefault": false
-          },
-          "problemMatcher": "$gcc"
+        "problemMatcher": {
+          "owner": "cpp",
+          "fileLocation": [
+            "relative",
+            "${workspaceFolder}"
+          ],
+          "pattern": {
+            "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+            "file": 1,
+            "line": 2,
+            "column": 3,
+            "severity": 4,
+            "message": 5
+          }
         }
+      },
+      {
+        "taskName": "build package",
+        "type": "shell",
+        "command": "cd build; cpack",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "build vscphelper unittest",
+        "type": "shell",
+        "command": "cd tests/helperlib;make",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": {
+          "owner": "cpp",
+          "fileLocation": [
+            "relative",
+            "${workspaceFolder}"
+          ],
+          "pattern": {
+            "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+            "file": 1,
+            "line": 2,
+            "column": 3,
+            "severity": 4,
+            "message": 5
+          }
+        }
+      },
+      {
+        "taskName": "clean & build unittest vscphelper",
+        "type": "shell",
+        "command": "cd tests/helperlib; make clean; make  -j4",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": {
+          "owner": "cpp",
+          "fileLocation": [
+            "relative",
+            "${workspaceFolder}"
+          ],
+          "pattern": {
+            "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+            "file": 1,
+            "line": 2,
+            "column": 3,
+            "severity": 4,
+            "message": 5
+          }
+        }
+      },
+      {
+        "taskName": "build unittest userlist",
+        "type": "shell",
+        "command": "cd test/userlist/build; make",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "clean & build unittest userlist",
+        "type": "shell",
+        "command": "cd tests/userlist; mkdir build; cd build; cmake ..; make clean; make -j4",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "build unittest clientlist",
+        "type": "shell",
+        "command": "cd test/clientlist/build; make",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "clean & build test remotetcpif",
+        "type": "shell",
+        "command": "cd tests/remotetcpif; rm -rf build; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make  -j4",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "build test remotetcpif",
+        "type": "shell",
+        "command": "cd tests/remotetcpif/build; make",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "clean & build unittest clientlist",
+        "type": "shell",
+        "command": "cd tests/clientlist; mkdir build; cd build; cmake ..; make clean; make  -j4",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "build test code for vscp-client-mqtt",
+        "type": "shell",
+        "command": "cd tests/vscp-client-mqtt/build; make",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "clean & build test code for vscp-client-mqtt",
+        "type": "shell",
+        "command": "cd tests/vscp-client-mqtt; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "build test code for mdfparser",
+        "type": "shell",
+        "command": "cd tests/mdfparser/build; make",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "clean & build test code for mdfparser",
+        "type": "shell",
+        "command": "cd tests/mdfparser; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "build test code for register-test",
+        "type": "shell",
+        "command": "cd tests/register/build; make -j4",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      },
+      {
+        "taskName": "clean & build test code for register-test",
+        "type": "shell",
+        "command": "cd tests/register; mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make -j4",
+        "args": [],
+        "group": {
+          "kind": "build",
+          "isDefault": false
+        },
+        "problemMatcher": "$gcc"
+      }
     ]
 }
