--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -210,7 +210,7 @@
         "request": "launch",
         "name": "Debug portfile(s)",
         "cmakeDebugType": "external",
-        "pipeName": "\\\\.\\pipe\\vcpkg_ext_portfile_dbg",
+        "pipeName": "/tmp/vcpkg_ext_portfile_dbg",
         "preLaunchTask": "Debug vcpkg commands"
       }
     ]
