Added utf-8 compiler option for windows compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,8 @@ endif()
 
 # Disable abi warnings (nlohmann)
 if(WIN32)
+add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
+add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 else()
 SET(GCC_VSCP_COMPILE_FLAGS "-Wno-psabi -D WITH_SYSTEMD")
 endif()
@@ -166,7 +168,7 @@ if(WIN32)
     add_definitions(-DWIN32_LEAN_AND_MEANS)
     add_definitions(-DOPENSSL_API_1_1)
     add_definitions(-D_POSIX_C_SOURCE)    
-    add_definitions(-DVCPKG_TARGET_TRIPLET=x64-windows)
+    add_definitions(-DVCPKG_TARGET_TRIPLET=x64-windows)    
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
     set(LIBS_SYSTEM ws2_32)
     if (MSVC)
