--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,7 +166,7 @@ endif(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
 if(WIN32)
 	  add_definitions(-D_WINSOCK_DEPRECATED_NO_WARNINGS)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
-    add_definitions(-DWIN32_LEAN_AND_MEANS)
+    add_definitions(-DWIN32_LEAN_AND_MEAN)
     add_definitions(-DOPENSSL_API_1_1)
     add_definitions(-D_POSIX_C_SOURCE)    
     add_definitions(-DVCPKG_TARGET_TRIPLET=x64-windows)    
